--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -395,6 +395,7 @@
     <ClInclude Include="c1CutSceneDeleteEntity.h">
       <Filter>Cutscene</Filter>
     </ClInclude>
+    <ClInclude Include="GlobalGameAdvances.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Modules">
