--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -443,6 +443,9 @@
     <Xml Include="Game\assets\xml\CutsceneTutorial.xml">
       <Filter>XML</Filter>
     </Xml>
+    <Xml Include="Game\assets\xml\CutsceneFinalRoom.xml">
+      <Filter>XML</Filter>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Game\assets\ff_icon.ico" />
