--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -353,6 +353,9 @@
       <Filter>XML</Filter>
     </Xml>
     <Xml Include="Game\assets\xml\Dialog.xml" />
+    <Xml Include="Game\assets\xml\CutsceneMiddleRoom.xml">
+      <Filter>XML</Filter>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Game\assets\ff_icon.ico" />
