--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -227,6 +227,7 @@
   <ItemGroup>
     <Xml Include="Game\assets\xml\config.xml" />
     <Xml Include="Game\assets\xml\CutsceneFinalRoom.xml" />
+    <Xml Include="Game\assets\xml\CutsceneMiddleRoom.xml" />
     <Xml Include="Game\assets\xml\CutsceneTutorial.xml" />
     <Xml Include="Game\assets\xml\Dialog.xml" />
     <Xml Include="Game\assets\xml\CutsceneBlockPass.xml" />
