--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -112,6 +112,7 @@
     <ClCompile Include="m1EasingSplines.cpp" />
     <ClCompile Include="e1Enemy.cpp" />
     <ClCompile Include="e1Entity.cpp" />
+    <ClCompile Include="p2math.cpp" />
     <ClCompile Include="p2Rooms.cpp" />
     <ClCompile Include="u1Bar.cpp" />
     <ClCompile Include="u1ChButton.cpp" />
@@ -177,6 +178,7 @@
     <ClInclude Include="p1Follow.h" />
     <ClInclude Include="p1Particle.h" />
     <ClInclude Include="p2ChangeControls.h" />
+    <ClInclude Include="p2math.h" />
     <ClInclude Include="p2Random.h" />
     <ClInclude Include="p2Rooms.h" />
     <ClInclude Include="u1Bar.h" />
