--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="e1StrangeFrog.cpp" />
     <ClCompile Include="e1Warrior.cpp" />
     <ClCompile Include="m1Cutscene.cpp" />
+    <ClCompile Include="m1MenuManager.cpp" />
     <ClCompile Include="m1ParticleManager.cpp" />
     <ClCompile Include="p1Explosion.cpp" />
     <ClCompile Include="p1Fire.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="e1StrangeFrog.h" />
     <ClInclude Include="e1Warrior.h" />
     <ClInclude Include="m1Cutscene.h" />
+    <ClInclude Include="m1MenuManager.h" />
     <ClInclude Include="m1ParticleManager.h" />
     <ClInclude Include="p1Explosion.h" />
     <ClInclude Include="p1Fire.h" />
