--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -198,6 +198,9 @@
     <ClCompile Include="u1UI_Element.cpp">
       <Filter>UI</Filter>
     </ClCompile>
+    <ClCompile Include="e1BlueSlime.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -428,6 +431,9 @@
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="e1BlueSlime.h">
+      <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
