--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClCompile Include="e1BlueSlime.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="e1SuperPurpleFrog.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -433,6 +436,9 @@
       <Filter>Misc</Filter>
     </ClInclude>
     <ClInclude Include="e1BlueSlime.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="e1SuperPurpleFrog.h">
       <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
