--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="e1Enemy.cpp" />
     <ClCompile Include="e1Entity.cpp" />
     <ClCompile Include="p2Rooms.cpp" />
+    <ClCompile Include="e1SuperPurpleFrog.cpp" />
     <ClCompile Include="u1Bar.cpp" />
     <ClCompile Include="u1ChButton.cpp" />
     <ClCompile Include="u1CheckBox.cpp" />
@@ -184,6 +185,7 @@
     <ClInclude Include="p2ChangeControls.h" />
     <ClInclude Include="p2Random.h" />
     <ClInclude Include="p2Rooms.h" />
+    <ClInclude Include="e1SuperPurpleFrog.h" />
     <ClInclude Include="u1Bar.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="u1ChButton.h" />
