--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -204,6 +204,9 @@
     <ClCompile Include="e1SuperPurpleFrog.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="u1VerticalSlider.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -440,6 +443,9 @@
     </ClInclude>
     <ClInclude Include="e1SuperPurpleFrog.h">
       <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="u1VerticalSlider.h">
+      <Filter>UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
