--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="e1BlueDog.cpp" />
     <ClCompile Include="e1BlueSlime.cpp" />
     <ClCompile Include="e1CarnivorousPlant.cpp" />
+    <ClCompile Include="e1Cassio.cpp" />
     <ClCompile Include="e1Drop.cpp" />
     <ClCompile Include="e1Mage.cpp" />
     <ClCompile Include="e1NPC.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="e1BlueDog.h" />
     <ClInclude Include="e1BlueSlime.h" />
     <ClInclude Include="e1CarnivorousPlant.h" />
+    <ClInclude Include="e1Cassio.h" />
     <ClInclude Include="e1Drop.h" />
     <ClInclude Include="e1Mage.h" />
     <ClInclude Include="e1NPC.h" />
