--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -116,8 +116,10 @@
     <ClCompile Include="m1EasingSplines.cpp" />
     <ClCompile Include="e1Enemy.cpp" />
     <ClCompile Include="e1Entity.cpp" />
+    <ClCompile Include="p2Math.cpp" />
     <ClCompile Include="p2Rooms.cpp" />
     <ClCompile Include="e1SuperPurpleFrog.cpp" />
+    <ClCompile Include="p2Math.h" />
     <ClCompile Include="u1Bar.cpp" />
     <ClCompile Include="u1ChButton.cpp" />
     <ClCompile Include="u1CheckBox.cpp" />
