--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -222,6 +222,9 @@
     <ClCompile Include="e1Frozen.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="e1MegaEye.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -469,6 +472,9 @@
       <Filter>Entities</Filter>
     </ClInclude>
     <ClInclude Include="e1Frozen.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="e1MegaEye.h">
       <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
