--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -247,14 +247,17 @@
     <Xml Include="Game\assets\xml\config.xml">
       <SubType>Designer</SubType>
     </Xml>
+    <Xml Include="Game\assets\xml\CutsceneAbility2Quest2.xml" />
     <Xml Include="Game\assets\xml\CutsceneAfterBossTutorial.xml">
       <SubType>Designer</SubType>
     </Xml>
     <Xml Include="Game\assets\xml\CutsceneFinalRoom.xml">
       <SubType>Designer</SubType>
     </Xml>
+    <Xml Include="Game\assets\xml\CutsceneFinalRoomQuest2.xml" />
     <Xml Include="Game\assets\xml\CutsceneLobbyTutorial.xml" />
     <Xml Include="Game\assets\xml\CutsceneMiddleRoom.xml" />
+    <Xml Include="Game\assets\xml\CutsceneQueenQuest2.xml" />
     <Xml Include="Game\assets\xml\CutsceneTutorial.xml" />
     <Xml Include="Game\assets\xml\Dialog.xml" />
     <Xml Include="Game\assets\xml\CutsceneBlockPass.xml" />
