globals and home cutscene added

--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -259,6 +259,7 @@
       <SubType>Designer</SubType>
     </Xml>
     <Xml Include="Game\assets\xml\CutsceneFinalRoomQuest2.xml" />
+    <Xml Include="Game\assets\xml\CutsceneHomeSleep.xml" />
     <Xml Include="Game\assets\xml\CutsceneLobbyTutorial.xml" />
     <Xml Include="Game\assets\xml\CutsceneMiddleRoom.xml" />
     <Xml Include="Game\assets\xml\CutsceneQueenQuest2.xml" />
