--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="c1CutSceneMoveEntity.cpp" />
     <ClCompile Include="c1CutsceneText.cpp" />
     <ClCompile Include="e1Archer.cpp" />
+    <ClCompile Include="e1BabyDrake.cpp" />
     <ClCompile Include="e1BlueDog.cpp" />
     <ClCompile Include="e1BlueSlime.cpp" />
     <ClCompile Include="e1CarnivorousPlant.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="c1CutSceneMoveEntity.h" />
     <ClInclude Include="c1CutSceneText.h" />
     <ClInclude Include="e1Archer.h" />
+    <ClInclude Include="e1BabyDrake.h" />
     <ClInclude Include="e1BlueDog.h" />
     <ClInclude Include="e1BlueSlime.h" />
     <ClInclude Include="e1CarnivorousPlant.h" />
