--- a/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
+++ b/Final_Fantasy_Mystery_World/Final_Fantasy_Mystery_World.vcxproj.filters
@@ -534,6 +534,9 @@
     <Xml Include="Game\assets\xml\CutsceneQueenQuest2.xml">
       <Filter>Cutscenes\XML</Filter>
     </Xml>
+    <Xml Include="Game\assets\xml\CutsceneLobbyQuest2.xml">
+      <Filter>Cutscenes\XML</Filter>
+    </Xml>
   </ItemGroup>
   <ItemGroup>
     <None Include="Game\assets\entities\CarnivorousPlant.tsx">
